--- a/index.html
+++ b/index.html
@@ -5,25 +5,6 @@
     <title> My first Webpage</title>
 </head>
 <body>
-    <img src="[bsu map comp 335] (imported)" width="2200" height="1700" border="0" usemap="#map" />
-
-    <map name="map">
-    <!-- #$-:Image map file created by GIMP Image Map plug-in -->
-    <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
-    <!-- #$-:Please do not edit lines starting with "#$" -->
-    <!-- #$VERSION:2.3 -->
-    <!-- #$AUTHOR:Marie Clancy -->
-    <area shape="poly" coords="297,679,350,697,318,741,271,722,272,708,279,691"  nohref="nohref" />
-    <area shape="poly" coords="167,672,194,640,240,660,245,684,218,704,171,700"  nohref="nohref" />
-    <area shape="poly" coords="172,714,230,736,162,813,112,795,112,779,125,760"  nohref="nohref" />
-    <area shape="poly" coords="274,792,346,814,367,758,300,739,266,772"  nohref="nohref" />
-    <area shape="poly" coords="300,868,216,936,179,924,221,860,263,832"  nohref="nohref" />
-    <area shape="poly" coords="179,867,199,865,222,838,185,823,143,810,130,829,124,844,145,855,163,858"  nohref="nohref" />
-    <area shape="poly" coords="405,715,463,743,509,716,497,686,423,660"  nohref="nohref" />
-    <area shape="poly" coords="341,832,335,860,355,897,382,916,438,884,385,825"  nohref="nohref" />
-    <area shape="poly" coords="365,787,462,866,549,808,505,752,386,731"  nohref="nohref" />
-    <area shape="poly" coords="505,866,563,921,651,864,575,800,503,844"  nohref="nohref" />
-    <area shape="poly" coords="529,759,539,791,580,792,598,779,682,803,706,790,702,756,726,715,636,696"  nohref="nohref" />
-    </map>
+    <h1>Marie </h1>
 </body>
 </html>
