fixed file name

--- a/assignment0.html
+++ b/assignment0.html
@@ -5,7 +5,7 @@
     <title> BSU West Campus</title>
 </head>
 <body>
-    <img src="bsu.jpgs" width="2200" height="1700" border="0" usemap="#map" />
+    <img src="bsu.jpg" width="2200" height="1700" border="0" usemap="#map" />
 
     <map name="bsumapwest">
     <!-- #$-:Image map file created by GIMP Image Map plug-in -->
