--- a/assignment0.html
+++ b/assignment0.html
@@ -25,5 +25,8 @@
 <area shape="poly" coords="121,841,196,870,220,828,142,810" alt="Harrington Hall" target="audio" href="harringtonhall.mp3" />
 <area shape="poly" coords="292,684,348,700,332,738,274,724" alt="Art Center" target="audio" href="artcenter.mp3" />
     </map>
+
+<iframe name="audio" style="display:none;"></iframe>
+
 </body>
 </html>
