adding sound maybe

--- a/assignment0.html
+++ b/assignment0.html
@@ -1,11 +1,9 @@
 
 <html>
-<head>
-    <meta charset="utf-8">
-    <title> BSU West Campus</title>
-</head>
+<head> <title> BSU West Campus</title></head>
 <body>
-    <img src="bsu.jpg" width="2200" height="1700" border="0" usemap="#map" />
+
+    <img src="bsu.jpg" width="2200" height="1700" border="0" usemap="#bsumap" />
 
     <map name="bsumap">
     <!-- #$-:Image map file created by GIMP Image Map plug-in -->
@@ -21,9 +19,9 @@
 <area shape="poly" coords="341,832,335,860,355,897,382,916,438,884,385,825" alt="Scott Hall" target="audio" href="audio/scotthall.mp3" />
 <area shape="poly" coords="365,787,462,866,549,808,505,752,386,731" alt="Rondileau Campus Center" target="audio" href="audio/RCC.mp3" />
 <area shape="poly" coords="505,866,563,921,651,864,575,800,503,844" alt="Maxwell Library" target="audio" href="audio/library.mp3" />
-<area shape="poly" coords="528,759,538,791,579,792,597,779,681,803,705,790,701,756,637,735,635,696" alt="audio/Mohler-Faria Science and Math Center" target="audio" href="audio/DMF.mp3" />
+<area shape="poly" coords="528,759,538,791,579,792,597,779,681,803,705,790,701,756,637,735,635,696" alt="Mohler-Faria Science and Math Center" target="audio" href="audio/DMF.mp3" />
 <area shape="poly" coords="121,841,196,870,220,828,142,810" alt="Harrington Hall" target="audio" href="audio/harringtonhall.mp3" />
-<area shape="poly" coords="292,684,348,700,332,738,274,724" alt="Art Center" target="audio" href="artcenter.mp3" />
+<area shape="poly" coords="292,684,348,700,332,738,274,724" alt="Art Center" target="audio" href="audio/artcenter.mp3" />
     </map>
 
 <iframe name="audio" style="display:none;"></iframe>
