--- a/exercise.html
+++ b/exercise.html
@@ -14,8 +14,8 @@
   <div>
 
       <div>
-        <img  src="images/BSU1.jpg">
-        <img  src="images/BSU2.jpg">
+        <img  src="BSU1.jpg">
+        <img  src="BSU2.jpg">
       </div>
       <div>
         <p>
