--- a/exercise.html
+++ b/exercise.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Bootstrap Example</title>
-
+  <meta name= "viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <header>
+
+  <div class= "jumbotron text-center">
     <h1>Bridgewater History</h1>
-  </header>
+    <p> Resize this responsive page to see the effect!</p>
+  </div>
 
-  <div>
+  <div class= "container">
 
-      <div>
+      <div class ="row">
+          <div class= "col-lg-4">
         <img  src="BSU1.jpg">
         <img  src="BSU2.jpg">
       </div>
@@ -44,3 +47,7 @@
 </body>
 
 </html>
+
+<div class= "Bridgewater History">
+        <h1>
+</div>
