--- a/assignment1.html
+++ b/assignment1.html
@@ -1,13 +1,17 @@
 <!--Marie Clancy 
 assignment1 due 10/4/19 -->
 <!DOCTYPE html>
-<html>
-  <body>
-    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
-    <iframe width="560" height= "315"
-    src="https://www.youtube.com/watch?v=2bW68nM0gk8" frameborder="0"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen></iframe>>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+  content="width=device-width,
+  initial-scale=1.0"> 
+
+  <meta http-equiv="X-UA-Compatible"
+  content="ie=edge">
+    <title>Marie Clancy</title>
+</head>
 
     <script>
       // 2. This code loads the IFrame Player API code asynchronously.
@@ -52,4 +56,4 @@ assignment1 due 10/4/19 -->
       }
     </script>
   </body>
-</html>
+
