--- a/assignment1.html
+++ b/assignment1.html
@@ -5,55 +5,16 @@ assignment1 due 10/4/19 -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
-  content="width=device-width,
-  initial-scale=1.0"> 
-
-  <meta http-equiv="X-UA-Compatible"
-  content="ie=edge">
-    <title>Marie Clancy</title>
+  content="width=device-width, initial-scale=1.0"> 
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Marie Clancy</title>
 </head>
 
-    <script>
-      // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
-
-      tag.src = "https://www.youtube.com/watch?v=2bW68nM0gk8";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-      // 3. This function creates an <iframe> (and YouTube player)
-      //    after the API code downloads.
-      var player;
-      function onYouTubeIframeAPIReady() {
-        player = new YT.Player('player', {
-          height: '390',
-          width: '640',
-          videoId: '2bW68nM0gk8',
-          events: {
-            'onReady': onPlayerReady,
-            'onStateChange': onPlayerStateChange
-          }
-        });
-      }
-
-      // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
-        event.target.playVideo();
-      }
-
-      // 5. The API calls this function when the player's state changes.
-      //    The function indicates that when playing a video (state=1),
-      //    the player should play for six seconds and then stop.
-      var done = false;
-      function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
-        }
-      }
-      function stopVideo() {
-        player.stopVideo();
-      }
-    </script>
-  </body>
-
+<body>
+  <header class="v-header containter">
+    <div class=".video-fullscreen">
+      <video scr="water.mp4"></video>
+    </div>
+  </header>
+</body>
+</html>
