--- a/assignment1.html
+++ b/assignment1.html
@@ -13,7 +13,16 @@ assignment1 due 10/4/19 -->
 <body>
   <header class="v-header containter">
     <div class=".video-fullscreen">
-      <video scr="water.mp4"></video>
+      <video src="water.mp4" autoplay="true" 
+      loop="true"></video>
+    </div>
+    <div class="header overlay"></div>
+    <div class="header-content">
+      <h1>Marie Clancy</h1>
+      <p>
+        Here's My Homepage 
+      </p>
+      <a href="#" class="About Me"></a>
     </div>
   </header>
 </body>
