--- a/assignment1.html
+++ b/assignment1.html
@@ -16,7 +16,7 @@ assignment1 due 10/4/19 -->
       <video src="water.mp4" autoplay="true" 
       loop="true"></video>
     </div>
-    <div class="header overlay"></div>
+    <div class="header-overlay"></div>
     <div class="header-content">
       <h1>Marie Clancy</h1>
       <p>
