--- a/assignment1.html
+++ b/assignment1.html
@@ -22,7 +22,11 @@ assignment1 due 10/4/19 -->
       <p>
         Here's My Homepage 
       </p>
-      <a href="#" class="btn">About Me></a>
+      <a href="#" class="btn">About Me
+        Resume
+        Hobbies
+        Work
+      </a>
     </div>
   </header>
 </body>
