--- a/assignment1.html
+++ b/assignment1.html
@@ -22,11 +22,10 @@ assignment1 due 10/4/19 -->
       <p>
         Here's My Homepage 
       </p>
-      <a href="#" class="btn">About Me
-        Resume
-        Hobbies
-        Work
-      </a>
+      <a href="#" class="btn">About Me</a>
+      <a href="#" class="btn">Resume</a>
+      <a href="#" class="btn">Hobbies</a>
+      <a href="#" class="btn">Work</a>
     </div>
   </header>
 </body>
