--- a/assignment1.html
+++ b/assignment1.html
@@ -22,10 +22,10 @@ assignment1 due 10/4/19 -->
       <p>
         Here's My Homepage 
       </p>
-      <a href="#" class="btn">About Me</a>
-      <a href="#" class="btn">Resume</a>
-      <a href="#" class="btn">Hobbies</a>
-      <a href="#" class="btn">Work</a>
+      <p><a href="#" class="btn">About Me</a></p>
+      <p><a href="#" class="btn">Resume</a></p>
+      <p><a href="#" class="btn">Hobbies</a></p>
+      <p><a href="#" class="btn">Work</a></p>
     </div>
   </header>
 </body>
