--- a/assignment1.html
+++ b/assignment1.html
@@ -14,7 +14,7 @@ assignment1 due 10/4/19 -->
   min-height: 100%;
 }
 
-/* Add some content at the bottom of the video/page */
+/*
 .content {
   position: fixed;
   bottom: 50%;
@@ -24,7 +24,7 @@ assignment1 due 10/4/19 -->
   padding: 20px;
   text-align: center;
 }
-
+*/
 .links{
   position: fixed; 
   bottom: 100;
@@ -49,7 +49,7 @@ assignment1 due 10/4/19 -->
 </video>
 
 <!-- Optional: some overlay text to describe the video -->
-<div class="content" id="center_div">
+<div class="content" id="center_div"  style='position: fixed;bottom: 50%;background: rgba(0, 0, 0, 0);color: #f1f1f1;width: 100%;padding: 20px;text-align: center;'>
   <h1>Marie Clancy</h1>
   <h2>This is my homepage</h2>
 </div>
