--- a/assignment1.html
+++ b/assignment1.html
@@ -32,8 +32,7 @@ assignment1 due 10/4/19 -->
   color: #f1f1f1;
   float: right;
   width: 100%;
-  padding: 20px;
-  height: 100vh;
+  padding: 200dp;
 }
 
 </style>
