--- a/assignment1.html
+++ b/assignment1.html
@@ -32,7 +32,7 @@ assignment1 due 10/4/19 -->
   color: #f1f1f1;
   float: right;
   width: 100%;
-  padding: 200dp;
+  padding: 200px;
 }
 
 </style>
