--- a/assignment1.html
+++ b/assignment1.html
@@ -33,6 +33,9 @@ assignment1 due 10/4/19 -->
   float: right;
   width: 100%;
   padding: 200px;
+  display: block;
+  font-size: 1.5rem;
+  padding-bottom:2rem;
 }
 
 </style>
