--- a/assignment1.html
+++ b/assignment1.html
@@ -32,9 +32,8 @@ assignment1 due 10/4/19 -->
   color: #f1f1f1;
   float: right;
   width: 100%;
-  padding: 200px;
-  display: block;
-  font-size: 1.5rem;
+  font-size: 50px;
+  padding: 20px;
   padding-bottom:2rem;
 }
 
