--- a/assignment1.html
+++ b/assignment1.html
@@ -46,7 +46,7 @@ assignment1 due 10/4/19 -->
 
  <!-- The video -->
 <video autoplay muted loop id="myVideo">
-  <source src="water.mp4" type="video/mp4">
+  <source src="background.mp4" type="video/mp4">
 </video>
 
 <!-- Optional: some overlay text to describe the video -->
