--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- Marie Clancy. Assignment 2 due October 8, 2019 --> 
+<!-- Marie Clancy. 
+    Assignment 2 due October 8, 2019 --> 
 
 <!DOCTYPE html>
 <html>
